# schnittstelle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp  run.sh
lib/lua_plugin/: lua_plugin.cpp  lua_plugin.h
schnittstelle/src/: schnitstelle.cpp  schnitstelle.h
schnittstelle/src/plugins/: plugins.cpp  plugins.h
schnittstelle/src/plugins/basic/: basic_functions.cpp
schnittstelle/src/plugins/lua/: lua_functions.cpp  lua_functions.h  lua_plugin.cpp
src/: drawer.lua  main.cpp  schnitstelle.cpp  schnitstelle.h
src/basic/: basic_plugin.cpp  basic_plugin.h  extra_basic_functions.cpp
src/lua/: lua_plugin.cpp  lua_plugin.h
src/plugins/: plugins.cpp  plugins.h
src/plugins/basic/: basic_function.cpp  basic_function.h  basic_functions.h  basic_plugin.cpp  basic_plugin.h
src/plugins/lua/: liolib.c  lua_functions.cpp  lua_functions.h  lua_plugin.cpp  lua_plugin.h
